[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >=72.1.0,<73",
]

[project]
dependencies = [
    "rich >=13.5,<14",
    "jinja2 >=3,<4",
    "actionman ==0.0.0.dev24",
    "controlman == 0.0.0.dev447",
    "conventionalcommits == 0.0.0.dev65",
    "github-contexts == 0.0.0.dev21",
    "loggerman == 0.0.0.dev93",
    "mdit == 0.0.0.dev63",
    "htmp == 0.0.0.dev5",
    "pylinks == 0.0.0.dev76",
    "pysyntax == 0.0.0.dev6",
    "versionman == 0.0.0.dev250",
    "gittidy == 0.0.0.dev91",
    "pkgdata == 0.0.0.dev5",
    "pyshellman == 0.0.0.dev53",
    "pyserials == 0.0.0.dev66",
    "fileex == 0.0.0.dev1",
    "ansi-sgr == 0.0.0.dev10",
    "pycolorit == 0.0.0.dev11",
]
name = "ProMan"
requires-python = ">=3.10"
version = "0.1.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespace = true
where = ["src"]
