[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >=72.1.0,<73",
]

[project]
dependencies = [
    "rich ==13.9.4",
    "jinja2 ==3.1.6",
    "actionman ==0.1.0",
    "controlman ==0.1.0",
    "conventionalcommits ==0.1.0",
    "github-contexts ==0.1.0",
    "loggerman ==0.1.0",
    "mdit ==0.1.0",
    "htmp ==0.1.0",
    "pylinks ==0.1.0",
    "pysyntax ==0.1.0",
    "versionman ==0.1.0",
    "gittidy ==0.1.0",
    "pkgdata ==0.1.0",
    "pyshellman ==0.1.0",
    "pyserials ==0.1.0",
    "fileex ==0.1.0",
    "ansi-sgr ==0.1.0",
    "pycolorit ==0.1.0",
]
name = "ProMan"
requires-python = ">=3.10"
version = "0.1.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
